# simulator_inference_center

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
client/: __init__.py  client.py  example.py  example_robosuite.py
docs/: architecture.md  message_schema.md
scripts/: run_server.py
src/simulator_inference_center/: __init__.py  backend.py  cli.py  config.py  dashboard.py  monitor.py  protocol.py  server.py  session.py  task_builder_ui.py  task_generator.py  task_store.py
src/simulator_inference_center/backends/: __init__.py  libero.py  robosuite.py
src/simulator_inference_center/client/: __init__.py  client.py
tests/: test_dashboard.py  test_libero_backend.py  test_libero_pro_registration.py  test_robosuite_backend.py  test_server.py  test_task_builder.py
